syntax = "proto2";

option go_package = "halite_config";
package halite_config;

message service_config {
	required string address = 1; // format address:port

	required string train_dir = 2;

	optional int32 max_trajectories_per_client = 3 [default = 5];

	required string saver_def = 4;

	optional int32 trajectory_len = 5 [default = 40];
	optional int32 max_batch_size = 6 [default = 50];
	optional int32 checkpoint_steps = 7 [default = 10000];
	optional int32 trajectory_channel_size = 8 [default = 1];
	optional int32 prune_old_clients_timeout_seconds = 9 [default = 120];
	optional float learning_rate = 10 [default = 0.001];
}
