syntax = "proto3";

package halite_proto;

message Status {
}

message State {
    bytes state = 1;
    bytes params = 2;
}

message StateBatch {
    repeated State batch = 1;
}

message ActionBatch {
    repeated int32 actions = 1;
}

message Qvals {
    repeated float qvals = 1;
}

message QvalsBatch {
    repeated Qvals batch = 1;
}

message HistoryEntry {
    int32 owner_id = 1;
    int32 env_id = 2;
    State state = 3;
    int32 action = 4;
    float reward = 5;
    State new_state = 6;
    bool done = 7;
    int32 step = 8;
}

service HaliteProcess {
    rpc GetActions(StateBatch) returns (ActionBatch) {}
    rpc Inference(StateBatch) returns (QvalsBatch) {}
    rpc HistoryAppend(HistoryEntry) returns (Status) {}
    rpc TrainStep(Status) returns (Status) {}
}
